test/should_not_compile/duplicate_val.sml
val a = () and a = 42;
